Add redis method
