# api/docs/swagger.json
@@ -8,6 +8,141 @@
     },
     "host": "localhost:4444",
     "paths": {
+        "/meal/createMeal": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Yangi meal yaratish uchun endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meal"
+                ],
+                "summary": "Yangi meal yaratish",
+                "parameters": [
+                    {
+                        "description": "Yangi meal so'rovi",
+                        "name": "meal",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menuRedis.MealCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/menuRedis.Status"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/meal/deleteMeal": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Mealni o'chirish",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meal"
+                ],
+                "summary": "Mealni o'chirish",
+                "parameters": [
+                    {
+                        "description": "Yangi meal so'rovi",
+                        "name": "meal",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menuRedis.MealDelete"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/menuRedis.Status"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/meal/updateMeal": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Mealni yangilash",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meal"
+                ],
+                "summary": "Mealni yangilash",
+                "parameters": [
+                    {
+                        "description": "Yangi meal so'rovi",
+                        "name": "meal",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menuRedis.MealCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/menuRedis.Status"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/menu/createFood": {
             "post": {
                 "security": [
@@ -1243,6 +1378,33 @@
                 }
             }
         },
+        "menuRedis.MealCreate": {
+            "type": "object",
+            "properties": {
+                "meal_id": {
+                    "type": "string"
+                },
+                "quality": {
+                    "type": "integer"
+                }
+            }
+        },
+        "menuRedis.MealDelete": {
+            "type": "object",
+            "properties": {
+                "meal_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "menuRedis.Status": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.Error": {
             "type": "object",
             "properties": {
@@ -1406,9 +1568,6 @@
                     "type": "string"
                 },
                 "createdAt": {
-                    "type": "string"
-                },
-                "description": {
                     "type": "string"
                 },
                 "limit": {
